fix(navbar): fix search alignment in mobile

--- a/public/css/components/drawer.css
+++ b/public/css/components/drawer.css
@@ -1,5 +1,6 @@
 #drawer-button {
 	cursor: pointer;
+	margin-right: 1em;
 }
 
 @media screen and (min-width: 768px) {
